--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   "private": true,
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "@prisma/extension-accelerate": "^2.0.2",
     "axios": "^1.13.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "express-http-proxy": "^2.1.2",
     "express-rate-limit": "^8.2.1",
     "morgan": "^1.10.1",
-    "prisma": "^6.19.0",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
@@ -47,6 +48,7 @@
     "jest-environment-node": "^30.0.2",
     "jest-util": "^30.0.2",
     "nx": "22.0.3",
+    "prisma": "^6.19.0",
     "react-refresh": "^0.10.0",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
